# alchemy

./: .gitignore  README.md  __init__.py  alchemy.py  card_stack.py  cards.py  enums.py  json_serializable.py  pyproject.toml  shelf.py
example/: main.py  original_config.toml
src/alchemy/: __init__.py  alchemy.py  card_stack.py  cards.py  enums.py  json_serializable.py  player.py  settings.py  shelf.py  stack.py
src/alchemy_original_console/: __init__.py  cards.py  enums.py
src/alchemy_original_console/handlers/: __init__.py  cast_spell.py  check_act_list.py  check_cards.py  check_crafts.py  check_point_list.py  check_shelf.py  consts.py  craft_recipe.py  drop_element.py  dump_data.py  utils.py
